# scopyon

./: .gitignore  .readthedocs.yaml  LICENSE  NEC_tirfm_script.py  README.md  analyses_correlation.py  analyses_moriga_fitting.py  analyses_palm_data.py  analyses_sim_fitting.py  bleaching_configs.py  blinking_script.py  camera_handler.py  camera_script.py  convert_addimages.py  convert_csv2txt.py  convert_npy2image.py  convert_temp.py  effects_handler.py  epifm_configurations.yml  epifm_handler.py  epifm_script.py  fcs_handler.py  fcs_script.py  flip_handler.py  flip_script.py  fluorescence.py  frap_handler.py  frap_script.py  hiroshima_configs.py  hiroshima_handler.py  kaizu_script.py  linescan_confm_handler.py  lscm_handler.py  lscm_test_convert.py  minDE_handler.py  moriga_handler.py  moriga_rewrite_script.py  nikon_repressilator.py  palm_handler.py  palm_rewrite_script.py  (+13 more)
.circleci/: config.yml
binder/: requirements.txt
bioimaging/: NEC_tirfm_script.py  __init__.py  analyses_correlation.py  analyses_moriga_fitting.py  analyses_palm_data.py  analyses_sim_fitting.py  analyses_sim_hist.py  blinking_script.py  camera_handler.py  camera_script.py  config.py  configbase.py  convert_addimages.py  convert_csv2txt.py  convert_fcs2npy.py  convert_npy2image.py  convert_temp.py  default_parameters.ini  effects.py  effects_handler.py  epifm.py  epifm_handler.py  epifm_rewrite_script.py  epifm_script.py  erk102_lscm_script.py  fcs_handler.py  fcs_script.py  flip_handler.py  flip_rewrite_script.py  flip_script.py  fluorescence.py  frap_handler.py  frap_rewrite_script.py  image.py  (+36 more)
(+1475 files in other folders)
