[project]
name = "scopyon"
version = "1.0.0a6"
description = "Monte Carlo simulation toolkit for bioimaging systems"
readme = "README.md"
authors = [
    { name = "Masaki Watabe", email = "masaki@riken.jp" },
    { name = "Kazunari Kaizu", email = "kaizu@riken.jp" },
]
requires-python = ">=3.13"
dependencies = [
    "hmmlearn>=0.3.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pint>=0.25.2",
    "pyyaml>=6.0.3",
    "scipy>=1.16.3",
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: BSD License",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mypkg = ["scopyon.yaml", "catalog/*.txt", "catalog/*/*.csv"]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[project.urls]
Documentation = "https://scopyon.readthedocs.io/"
Repository = "https://github.com/ecell/scopyon"
